<resources>
    <string name="app_name">Quiz de Ciências</string>
    <string name="quiz_de_ciencias">Quiz de Ciências</string>
    <string name="qu_mica">Química</string>
    <string name="f_sica">Física</string>
    <string name="biologia">Biologia</string>
    <string name="title_activity_tela_fisica">TelaFisica</string>
    <string name="todo">TODO</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="avan_ar">AVANÇAR</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="enunciado">1) No GLP (Gás de Cozinha) há uma subtância essencial para detectar vazamento de gás, através de seu odor caracterísicto. O gás em questão é:</string>
    <string name="resultado">Resultado</string>
    <string name="total_acertos">Total de Acertos:</string>
    <string name="textview1">Textview</string>
    <string name="textview2">Textview</string>
    <string name="textview3">Textview</string>
    <string name="textview4">Textview</string>
    <string name="textview5">Textview</string>
    <string name="textview">TextView</string>
    <string name="correta">Resposta correta: A</string>
    <string name="marcada">Sua resposta</string>
    <string name="resposta">Resposta Correta</string>
</resources>
