<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enunciado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="16sp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview4"
        android:textColor="#000000"
        android:textSize="16sp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview5"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/correta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resposta"
        android:textColor="#00FF31"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/marcou_certa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marcada"
        android:textColor="#00FF31"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/marcou_errada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marcada"
        android:textColor="#E81400"
        android:textSize="18sp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

</LinearLayout>
